(library
  (name stunnel)
  (public_name stunnel)
  (wrapped false)
  (flags (:standard -w -37))
  (libraries astring
             fmt
             forkexec
             ipaddr
             logs.fmt
             ptime
             safe-resources
             threads
             xapi-stdext-pervasives
             xapi-stdext-threads
             xapi-stdext-unix
             xapi-idl)
)
