(library
  (name stunnel)
  (public_name stunnel)
  (wrapped false)
  (flags (:standard -w -37))
  (libraries astring
             forkexec
             ipaddr
             ptime
             safe-resources
             threads
             uuidm
             xapi-idl
             xapi-inventory
             xapi-stdext-pervasives
             xapi-stdext-threads
             xapi-stdext-unix)
)
